[package]
name = "CrossPen"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
log = "0.4.31"
env_logger = "0.11.10"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
